fix: change site title

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: Zoteye
+title: ZotEye
 tagline: Plagiarism detection for Zotero reference libraries
 description: >
   A free, open-source Python-based tool for detecting plagiarism in Zotero reference libraries
